force-app/main/default/objects/Test__c/fields/Programming_Language__c.field-meta.xml
<CustomField>
    <fullName>Programming_Language__c</fullName>
    <label>Programming Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>