force-app/main/default/objects/Test__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Test Subtype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>