force-app/main/default/objects/Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Subtype__c</columns>
    <columns>Programming_Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>